--- a/qlat/bin/meson.build
+++ b/qlat/bin/meson.build
@@ -11,5 +11,6 @@ scripts = files(
   'topo-measure',
   'topo-measure-wilson-flow',
   'topo-measure-gpt',
+  'bind-gpu-qlat.sh',
   )
 install_data(scripts, install_dir: get_option('bindir'), install_mode: 'rwxr-xr-x')
